--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-dom": "^16.2.0",
     "rimraf": "^2.6.2",
     "lint-staged": "4.3.0",
-    "mol-conventional-changelog": "1.2.0"
+    "mol-conventional-changelog": "1.2.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1"
   },
   "lint-staged": {
     "**/*.js": [
