--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-micro-lifecycles",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "Micro life-cycles form React DOM nodes",
   "main": "lib/index.js",
   "scripts": {
@@ -16,6 +16,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/streamich/react-micro-lifecycles.git"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
   },
   "dependencies": {
   },
